# s3-explorer

./: .copier-answers.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
src/s3_explorer/: app.py  main.py
