[project]
authors = [
  {name = "ninanor", email = "ninanor@nina.no"}
]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
  "arro3-core>=0.8.0",
  "django-environ",
  "fsspec>=2026.2.0",
  "humanize>=4.15.0",
  "ibis-framework[duckdb]>=12.0.0",
  "obstore>=0.9.2",
  "omegaconf>=2.3.0",
  "streamlit>=1.30.0",
]
description = ""
license = "GPL-3.0+"
name = "s3-explorer"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"


[project.scripts]


[dependency-groups]
dev = [
  "deptry",
  "hatchling",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = ["COM812"]
select = ["E", "W", "I", "F", "UP", "S", "B", "A", "COM", "LOG", "PTH", "Q"]
