[dependency-groups]
dev = [
  "deptry",
  "hatchling"
]

[project]
authors = [
  {name = "ninanor", email = "ninanor@nina.no"}
]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
  "arro3-core>=0.8.0",
  "django-environ",
  "fsspec>=2026.2.0",
  "geoarrow-pyarrow>=0.2.0",
  "geopandas>=1.1.3",
  "humanize>=4.15.0",
  "ibis-framework[duckdb,geospatial]>=12.0.0",
  "leafmap>=0.60.4",
  "obstore>=0.9.2",
  "omegaconf>=2.3.0",
  "pyarrow>=15.0.0",
  "pyogrio>=0.12.1",
  "streamlit>=1.30.0"
]
description = ""
license = "GPL-3.0+"
name = "s3-explorer"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.scripts]

[tool.deptry]
ignore = ["DEP002", "DEP003"]

[tool.pixi.dependencies]
libgdal-arrow-parquet = ">=3.12.2,<4"
pyogrio = ">=0.12.1,<0.13"

[tool.pixi.environments]
default = {solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}

[tool.pixi.pypi-dependencies]
s3-explorer = {path = ".", editable = true}

[tool.pixi.tasks]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = ["COM812"]
select = ["E", "W", "I", "F", "UP", "S", "B", "A", "COM", "LOG", "PTH", "Q"]
